# garage

./: .gitignore  .gitmodules  0x00000037  CMakeLists.txt  CREDITS  LICENSE.txt  build_win32_zig.sh  compress_build.sh  readme.md  todo.md  vehicle.bt
ext/: stb_dxt.c  stb_rect_pack.c  stb_truetype.c  txt2h.c
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.c  model.c  model.h  obj.c  obj.h  part_ids.c  part_ids.h  parts.c  parts.h  physfs_bundling.c  physfs_bundling.h  stfs.c  stfs.h  vehicle.c  vehicle.h
src/common/: endian.h  file.c  file.h  gl_debug.c  gl_setup.c  image.c  image.h  input.c  input.h  int.c  int.h  list.c  list.h  logging.c  logging.h  model.c  model.h  path.c  path.h  platform.h  primitives.c  sha1.c  sha1.h  shader.c  shader.h  utf8.h  vector.c  vector.h
src/editor/: camera.c  camera.h  editor.c  editor.h  gui_common.c  gui_common.h  render_debug.c  render_debug.h  render_garage.c  render_garage.h  render_text.c  render_text.h  render_user.c  render_user.h  vehicle_edit.c  vehicle_edit.h
src/editor/shader/: text.frag  text.vert
src/gui/: camera.c  camera.h  gl_debug.c  gl_debug.h  gl_setup.c  gl_setup.h  gl_types.h  gui_common.c  gui_common.h  input.c  input.h  primitives.c  primitives.h  render_debug.c  render_debug.h  render_garage.c  render_garage.h  render_text.c  render_text.h  render_user.c  render_user.h  renderer.h  shader.c  shader.h
src/gui/shader/: fragment.glsl  text.frag  text.vert  vertex.glsl
test/: CMakeLists.txt  main.c  test_stfs.c  test_struct.c  test_struct_size.c  testing.h
